# rgms_konfig

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  CargoAttributes.nsi  LICENSE  README.md  RELEASE.md  Setup-ra-gas.nsi  Setup.nsi  TODO.md  appveyor.yml  build.rs  package.sh
examples/: client.rs  csv2rreg.rs  csv2rwreg.rs  modbus_rtu_master.rs  test_rreg_store.rs  test_rreg_store.rs_  test_rwreg_store.rs  test_rwreg_store.rs_
misc/: Sensor-MB-alle_Register.ods
resources/: .~lock.sensor_mb_ne4_legacy-rregs.csv#  11-09-2020_Beschreibung_RA-GAS Sensor-MB.docx  11-09-2020_Beschreibung_RA-GAS Sensor-MB.html  25-05-2020_Beschreibung_RA-GAS Sensor-MB.docx  25-05-2020_Beschreibung_RA-GAS Sensor-MB.html  27-10-2020_Beschreibung_RA-GAS Sensor-MB.docx  28-08-2020_Beschreibung_RA-GAS Sensor-MB.docx  28-08-2020_Beschreibung_RA-GAS Sensor-MB.html  28-08-2020_Beschreibung_RA-GAS Sensor-MB.ods  Beschreibung-Register.ods  Sensor-MB-CO2_O2_REV1_0-Rreg.csv  Sensor-MB-CO2_O2_REV1_0-Rwreg.csv  Sensor-MB-NAP5X_REV1_0-Rreg.csv  Sensor-MB-NAP5X_REV1_0-Rwreg.csv  Sensor-MB-NAP5xx_REV1_0-Rreg.csv  Sensor-MB-NAP5xx_REV1_0-Rwreg.csv  Sensor-MB-NE4_REV1_0-Rwreg.csv  Sensor-MB-NE4_V1.0-Rreg.csv  Sensor-MB-NE4_V1.0-Rwreg.csv  Sensor-MB-SP42A_REV1_0-Rreg.csv  Sensor-MB-SP42A_REV1_0-Rwreg.csv  sensor_mb_co2_o2-rwregs.csv  sensor_mb_nap5x-rwregs.csv  sensor_mb_nap5xx-rregs.csv  sensor_mb_nap5xx-rwregs.csv  sensor_mb_ne4-rwregs.csv  sensor_mb_ne4_legacy-rwregs.csv  sensor_mb_sp42a-rwregs.csv  style-ra-gas.css  style.css
src/: lib.rs  main.rs
src/gui/gtk3/: macros.rs  mod.rs  rgms_konfig.ui  rreg_store.rs  rwreg_store.rs
src/modbus_master/: context.rs  context_error.rs  error.rs  mod.rs
src/modbus_rtu_master/: mod.rs
src/platine/: mod.rs  sensor_mb_co2_o2.rs  sensor_mb_nap5x.rs  sensor_mb_nap5xx.rs  sensor_mb_ne4.rs  sensor_mb_ne4_legacy.rs  sensor_mb_sp42a.rs
src/registers/: error.rs  mod.rs  rreg.rs  rwreg.rs
src/sensors/: mod.rs  sensor_mb_co2_o2.rs  sensor_mb_nap5x.rs  sensor_mb_nap5xx.rs  sensor_mb_ne4.rs  sensor_mb_ne4_legacy-rwregs.csv  sensor_mb_ne4_legacy.rs  sensor_mb_sp42a.rs
src/serial_interface/: mod.rs
