[package]
name = "rgms_konfig"
version = "0.1.0"
authors = ["Stefan Müller <zzeroo> <co@zzeroo.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/RA-GAS-GmbH/rgms_konfig"
description = "GUI für die Konfiguration der Sensoren vom Typ 'RA-GAS Modbus System'"
edition = "2018"

[features]
default = []
# RA-GAS interne Version mit mehr Funktionen
ra-gas = []

[badges]
appveyor = { repository = "zzeroo/rgms-konfig", service = "gitlab" }
gitlab = { repository = "RA-GAS-GmbH/rgms_konfig" }
maintenance = { status = "actively-developed" }

[dependencies]
csv = "1.1.3"
futures = "0.3.5"
gio = "0.9.1"
gtk = "0.9.2"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2.22", features = ["sync"] }
tokio-modbus = "0.4.0"
tokio-serial = "4.3.3"
gdk = "0.13.2"
glib = "0.10.1"
