[package]
authors = ["Stefan Müller <zzeroo> <co@zzeroo.com>"]
description = "Konfigurator für Sensoren der 'RA-GAS GmbH Modbus System' Serie"
version = "1.0.1"
name = "rgms_konfig"
readme = "README.md"
repository = "https://gitlab.com/RA-GAS-GmbH/rgms_konfig"
homepage = "https://gitlab.com/RA-GAS-GmbH/rgms_konfig"
edition = "2018"
license = "LGPL-2.1"
build = "build.rs"

[features]
default = []
# RA-GAS interne Version mit mehr Funktionen
ra-gas = []

[badges]
appveyor = {repository = "zzeroo/rgms-konfig", service = "gitlab"}
gitlab = {repository = "RA-GAS-GmbH/rgms_konfig"}
maintenance = {status = "actively-developed"}

[dependencies]
csv = "1.1.3"
futures = "0.3.5"
gdk = "0.13"
gio = "0.9.1"
glib = "0.10.1"
gtk = {version = "0.9.2", features = ["v3_22"]}
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = {version = "1", features = ["derive"]}
tokio = {version = "0.2.22", features = ["sync", "time"]}
tokio-modbus = "0.4.0"
# tokio-serial = "4.3.3"
tokio-serial = {git = "https://github.com/zzeroo/tokio-serial.git", branch = "feature/port_enumeration"}
chrono = "0.4.19"
libmodbus = "1"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "RGMS_KONFIG.EXE"
LegalCopyright = "Copyright © 2020"
FileDescription = "Konfigurator für Sensoren der 'RA-GAS GmbH Modbus System' Serie"
ProductName = "'RA-GAS GmbH Modbus System' - Konfiguration"
ProductVersion = "1.0.1"
